extend reservation - date, time, room, person count

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -24,6 +24,10 @@ ru:
         card: 'Ката лояльности'
         password_confirmation: 'Еще раз пароль'
       reservation:
+        date: 'Дата посещения'
+        time: 'Время посещения'
+        room: 'Зал'
+        person: 'Количество персон'
         name: "Ваше Имя"
         email: "Ваш Email"
         phone: 'Ваш Телефон'
